add_library(cppweb STATIC
    Logger.cpp
    InetAddress.cpp
    ThreadPool.cpp
    TimerQueue.cpp
    Channel.cpp
    Epoller.cpp
    EventLoop.cpp
    EventLoopThread.cpp
    Buffer.cpp
    TCPConnection.cpp
    TCPServerSingle.cpp
    Acceptor.cpp
    Callbacks.cpp
    TCPClient.cpp
    Connector.cpp)
